--- a/style.css
+++ b/style.css
@@ -7,30 +7,25 @@
   text-decoration: none !important;
 }
 
-.navbar {
+header .navbar {
   height: 150px !important;
   background-color: rgb(2, 57, 128) !important;
 }
-
-.img-navbar {
+header .navbar .img-navbar {
   height: 160px;
 }
-
-.nav-link {
+header .navbar .nav-link {
   color: white !important;
 }
-
-.nav-link:hover {
+header .navbar .nav-link:hover {
   color: black !important;
 }
-
-.nav_bar {
+header .nav_bar {
   font-size: 30px;
   margin: 30px;
   color: white;
 }
-
-.nav_bar:hover {
+header .nav_bar:hover {
   cursor: pointer;
 }
 
@@ -82,8 +77,7 @@ footer {
   width: 100%;
   height: 100%;
 }
-
-.container__footer {
+footer .container__footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -94,8 +88,7 @@ footer {
   color: rgb(255, 255, 255);
   font-family: "Heebo", sans-serif;
 }
-
-.logo1 img {
+footer .container__footer .logo1 img {
   height: 160px;
   margin-bottom: 10px;
 }
@@ -105,59 +98,17 @@ footer i {
   margin-left: 33px;
 }
 
-.card {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  height: 550px;
-  width: 300px;
-  background-color: rgb(83, 82, 82);
-  text-align: center;
-  border: 1px solid black;
+.navegacion {
+  margin: 10px;
 }
 
-.card_img {
-  height: 300px;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
+.contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
 }
 
-.card_img1 {
-  background-image: url(multimedia/descarga6.jpg);
-}
-
-.card_img2 {
-  background-image: url(multimedia/camion4.jpg);
-}
-
-.card_img3 {
-  background-image: url(multimedia/laboratorio.jpg);
-}
-
-.card_img4 {
-  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
-}
-
-.card_title {
-  font-size: 19px;
-  padding: 10px;
-  color: white;
-  background-color: #333;
-}
-
-.card_desc {
-  color: white;
-  margin-top: 5px;
-}
-
-.card a {
-  color: white;
-  background-color: rgb(2, 57, 128);
-  text-decoration: none;
-  padding: 10px 20px;
-  width: 110px;
-  margin-left: 93px;
-  border-radius: 10px;
+.redes_sociales {
+  margin: 10px;
 }
 
 .home {
@@ -168,62 +119,24 @@ footer i {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
 }
-
-.foto {
+.home .foto {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   text-align: center;
   font-size: 20px;
 }
-
-.img1 {
+.home .img1 {
   background-image: url(multimedia/planta.jpg);
 }
-
-.img2 {
+.home .img2 {
   background-image: url(multimedia/descarga2.jpg);
 }
-
-.img3 {
+.home .img3 {
   background-image: url(multimedia/movimiento\ de\ suelo.jpg);
 }
-
-.img4 {
+.home .img4 {
   background-image: url(multimedia/planta4.png);
-}
-
-.servicios {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(2, 2fr);
-  grid-template-rows: repeat(2, 400px);
-  padding: 15px;
-  grid-gap: 115px;
-  margin-top: 30px;
-  margin-bottom: 130px;
-}
-
-.fot {
-  border: 1px solid #000;
-  background-position: center;
-  background-size: cover;
-}
-
-.fot1 {
-  background-image: url(multimedia/descarga6.jpg);
-}
-
-.fot2 {
-  background-image: url(multimedia/camion\ 3.jpg);
-}
-
-.fot3 {
-  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
-}
-
-.fot4 {
-  background-image: url(multimedia/laboratorio.jpg);
 }
 
 h3 {
@@ -252,51 +165,44 @@ h2:hover {
   grid-gap: 15px;
   padding: 15px;
 }
-
-.item {
+.clients .item {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   border-radius: 10px;
   transition: all 0.3s;
 }
-
-.item:hover {
+.clients .item:hover {
   transform: scale(1.02);
 }
-
-.item1 {
+.clients .item1 {
   background-image: url(multimedia/C1.png);
 }
-
-.item2 {
+.clients .item2 {
   background-image: url(multimedia/C2.png);
 }
-
-.item3 {
+.clients .item3 {
   background-image: url(multimedia/C3.png);
 }
-
-.item4 {
+.clients .item4 {
   background-image: url(multimedia/C4.png);
 }
-
-.item5 {
+.clients .item5 {
   background-image: url(multimedia/C5.png);
 }
-
-.item6 {
+.clients .item6 {
   background-image: url(multimedia/C6.png);
 }
 
 form {
   margin: 50px;
   margin-top: 20px;
-  height: 185px;
-  width: 1260px;
-  border-style: solid;
-  text-align: center;
   font-weight: 600 !important;
+  border: solid 2px black;
+  height: 340px;
+  width: auto;
+  text-align: left;
+  padding: 10px;
 }
 
 .mapa {
@@ -306,27 +212,6 @@ form {
 
 iframe {
   width: 1000px;
-}
-
-.navegacion {
-  margin: 10px;
-}
-
-.contacto {
-  font-family: "Heebo", sans-serif !important;
-  margin: 10px;
-}
-
-.redes_sociales {
-  margin: 10px;
-}
-
-form {
-  border: solid 2px black;
-  height: 340px;
-  width: auto;
-  text-align: left;
-  padding: 10px;
 }
 
 .mb-3 {
@@ -344,25 +229,25 @@ form {
     grid-template-rows: repeat(4, 850px);
     height: 3450px;
   }
-  .card {
+  section .card {
     width: 1100px;
     height: 800px;
   }
-  .card_img {
+  section .card .card_img {
     height: 800px;
   }
-  .card_img1 {
+  section .card .card_img1 {
     background-image: url(multimedia/descarga8.jpg);
+  }
+  section .card .card_title {
+    font-size: 30px;
+  }
+  section .card .card_desc {
+    font-size: 20px;
   }
   .card a {
     margin-left: 500px;
     margin-bottom: 20px;
-  }
-  .card_title {
-    font-size: 30px;
-  }
-  .card_desc {
-    font-size: 20px;
   }
 }
 @media only screen and (max-width: 1120px) {
@@ -484,7 +369,7 @@ form {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 200px);
   }
-  .img3 {
+  .home .img3 {
     background-image: url(multimedia/obra.jpg);
   }
 }
@@ -651,9 +536,6 @@ form {
   .boton {
     margin-top: 50px;
   }
-  .us {
-    margin-bottom: 20px;
-  }
 }
 /*variables inicio*/
 /*variables final*/
@@ -663,6 +545,72 @@ form {
   overflow: hidden;
   height: 700px;
 }
+
+section {
+  display: flex;
+  justify-content: space-evenly;
+  height: 650px;
+}
+
+.us {
+  background-color: rgba(0, 0, 0, 0.774);
+  color: white;
+  font-size: 25px;
+  margin: 20px 10px 10px 10px;
+  padding: 10px;
+}
+
+section {
+  display: flex;
+  justify-content: space-evenly;
+  height: 650px;
+}
+section .card {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 550px;
+  width: 300px;
+  background-color: rgb(83, 82, 82);
+  text-align: center;
+  border: 1px solid black;
+}
+section .card .card_img {
+  height: 300px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
+section .card .card_img1 {
+  background-image: url(multimedia/descarga6.jpg);
+}
+section .card .card_img2 {
+  background-image: url(multimedia/camion4.jpg);
+}
+section .card .card_img3 {
+  background-image: url(multimedia/laboratorio.jpg);
+}
+section .card .card_img4 {
+  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
+}
+section .card .card_title {
+  font-size: 19px;
+  padding: 10px;
+  color: white;
+  background-color: #333;
+}
+section .card .card_desc {
+  color: white;
+  margin-top: 5px;
+}
+
+.card a {
+  color: white;
+  background-color: rgb(2, 57, 128);
+  padding: 10px 20px;
+  width: 110px;
+  margin-left: 93px;
+  border-radius: 10px;
+}/*# sourceMappingURL=style.css.map */
 
 section {
   display: flex;
