--- a/style.sass
+++ b/style.sass
@@ -6,37 +6,24 @@
     box-sizing: border-box
     text-decoration: none !important 
 
-.navbar
-    height: 150px
-    background-color: rgb(2, 57, 128)
+header
 
-.img-navbar
-    height: 160px
+    .navbar
+        height: 150px !important
+        background-color: rgb(2, 57, 128) !important
 
-.nav-link
-    color: white !important
+        .img-navbar
+            height: 160px
+        
+    
 
-.nav-link:hover
-    color: black !important
+    .nav-link
+        color: white !important
+    
 
-.nav_bar
-    font-size: 30px
-    margin: 30px
-    color: white
-
-.nav_bar:hover
-    cursor: pointer
-
-nav a
-    font-family: 'Heebo', sans-serif
-    padding-right: 10px
-    color: rgb(255, 255, 255)
-    text-decoration: none
-    justify-content: space-between
-    font-size: 18px
-
-nav a:hover
-    color: rgb(0, 0, 0)
+    .nav-link:hover
+        color: black !important
+    
 
 body
     margin: 0
@@ -52,15 +39,13 @@ h1
 h4
     font-size: 23px !important
 
-h4
-    font-size: 23px !important
-
 h5
     font-size: 18px !important
     margin-top: 12px
 
 h6
     font-size: 20px !important
+    font-weight: 700
     text-align: center
     margin-bottom: 5px
     margin-top: 5px
@@ -70,24 +55,50 @@ footer
     width: 100%
     height: 100%
 
-.container__footer
-    display: flex
-    justify-content: space-between
-    flex-wrap: wrap
-    width: auto
-    margin: auto
-    height: 170px
-    background-color: rgb(2, 57, 128)
-    color: rgb(255, 255, 255)
-    font-family: 'Heebo', sans-serif
+    .container__footer
+        display: flex
+        justify-content: space-between
+        flex-wrap: wrap
+        width: auto
+        margin: auto
+        height: 170px
+        background-color: rgb(2, 57, 128)
+        color: rgb(255, 255, 255)
+        font-family: 'Heebo', sans-serif
 
-.logo1 img
-    height: 160px
-    margin-bottom: 10px
+        .logo1 img
+            height: 160px
+            margin-bottom: 10px
+        
+    
+
+    nav a
+        font-family: 'Heebo', sans-serif
+        padding-right: 10px
+        color: rgb(255, 255, 255)
+        text-decoration: none
+        justify-content: space-between
+        font-size: 18px
+    
+
+    nav a:hover
+        color: rgb(0, 0, 0)
+    
 
 footer i
     font-size: 20px
     margin-left: 33px
+
+
+.navegacion
+    margin: 10px
+
+.contacto
+    font-family: 'Heebo', sans-serif !important
+    margin: 10px
+
+.redes_sociales
+    margin: 10px
 
 .vw_truck
     background-image: url(multimedia/planta4.png)
@@ -95,12 +106,13 @@ footer i
     overflow: hidden
     height: 700px
 
-.us
-    background-color: rgba(0, 0, 0, 0.774)
-    color: white
-    font-size: 25px
-    margin: 20px 10px 10px 10px
-    padding: 10px
+    .us
+        background-color: rgba(0, 0, 0, 0.774)
+        color: white
+        font-size: 25px
+        margin: 20px 10px 10px 10px
+        padding: 10px
+    
 
 section
     display: flex
@@ -161,51 +173,26 @@ section
     grid-template-columns: repeat(4, 1fr)
     grid-template-rows: repeat(1, 1fr)
 
-.foto
-    border: 1px solid #000
-    background-position: center
-    background-size: cover
-    text-align: center
-    font-size: 20px
+    .foto
+        border: 1px solid #000
+        background-position: center
+        background-size: cover
+        text-align: center
+        font-size: 20px
+    
 
-.img1
-    background-image: url(multimedia/planta.jpg)
-
-.img2
-    background-image: url(multimedia/descarga2.jpg)
-
-.img3
-    background-image: url(multimedia/movimiento\ de\ suelo.jpg)
-
-.img4
-    background-image: url(multimedia/planta4.png)
-
-.servicios
-    display: grid
-    width: 100%
-    grid-template-columns: repeat(2, 2fr)
-    grid-template-rows: repeat(2, 400px)
-    padding: 15px
-    grid-gap: 115px
-    margin-top: 30px
-    margin-bottom: 130px
-
-.fot
-    border: 1px solid #000
-    background-position: center
-    background-size: cover
-
-.fot1
-    background-image: url(multimedia/descarga6.jpg)
-
-.fot2
-    background-image: url(multimedia/camion\ 3.jpg)
-
-.fot3
-    background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg)
-
-.fot4
-    background-image: url(multimedia/laboratorio.jpg)
+    .img1
+        background-image: url(multimedia/planta.jpg)
+    
+    .img2
+        background-image: url(multimedia/descarga2.jpg)
+    
+    .img3
+        background-image: url(multimedia/movimiento\ de\ suelo.jpg)
+    
+    .img4
+        background-image: url(multimedia/planta4.png)
+    
 
 h3
     color: white
@@ -230,78 +217,132 @@ h2:hover
     grid-gap: 15px
     padding: 15px
 
-.item
-    border: 1px solid #000
-    background-position: center
-    background-size: cover
-    border-radius: 10px
-    transition: all 0.3s
+    .item
+        border: 1px solid #000
+        background-position: center
+        background-size: cover
+        border-radius: 10px
+        transition: all 0.3s
+    
 
-.item:hover
-    transform: scale(1.02)
+    .item:hover
+        transform: scale(1.02)
+    
 
-.item1
-    background-image: url(multimedia/C1.png)
-
-.item2
-    background-image: url(multimedia/C2.png)
-
-.item3
-    background-image: url(multimedia/C3.png)
-
-.item4
-    background-image: url(multimedia/C4.png)
-
-.item5
-    background-image: url(multimedia/C5.png)
-
-.item6
-    background-image: url(multimedia/C6.png)
+    .item1
+        background-image: url(multimedia/C1.png)
+    
+    .item2
+        background-image: url(multimedia/C2.png)
+    
+    .item3
+        background-image: url(multimedia/C3.png)
+    
+    .item4
+        background-image: url(multimedia/C4.png)
+    
+    .item5
+        background-image: url(multimedia/C5.png)
+    
+    .item6
+        background-image: url(multimedia/C6.png)
+    
 
 form
     margin: 50px
     margin-top: 20px
-    height: 185px
-    width: 1260px
-    border-style: solid
-    text-align: center
-    font-weight: 600 !important
-
-.mapa
-    margin: 20px
-    margin-left: 25px
-    text-align: center
-
-.navegacion
-    margin: 10px
-
-.contacto
-    font-family: 'Heebo', sans-serif !important
-    margin: 10px
-
-.redes_sociales
-    margin: 10px
-
-form
     border: solid 2px black
     height: 340px
+    width: auto
     text-align: left
     padding: 10px
+    font-weight: 600
+
+.mapa
+    margin: 20px 20px 40px 20px
+    text-align: center
+
+iframe
+    width: 1000px
 
 .mb-3
     font-size: 20px
 
-button
-    margin-left: 580px
+.boton
+    text-align: center
 
 
 /*comienzan las media quare*/
+
+@media only screen and (max-width: 1215px)
+    section
+        display: grid
+        grid-template-rows: repeat(4, 850px)
+        height: 3450px
+    
+    .card
+        width: 1100px
+        height: 800px
+    
+    .card_img
+        height: 800px
+    
+    .card_img1
+        background-image: url(multimedia/descarga8.jpg)
+    
+    .card a
+        margin-left: 500px
+        margin-bottom: 20px
+    
+    .card_title
+        font-size: 30px
+    
+    .card_desc
+        font-size: 20px
+    
+
+
+@media only screen and (max-width: 1120px)
+    section
+        grid-template-rows: repeat(4, 750px)
+        height: 3050px
+    
+    .card
+        width: 900px
+        height: 700px
+    
+    .card a
+        margin-left: 400px
+    
+
+
+@media only screen and (max-width: 1080px)
+    iframe
+        width: 700px
+    
+
+
+@media only screen and (max-width: 920px)
+    section
+        grid-template-rows: repeat(4, 750px)
+    
+    .card
+        width: 700px
+        height: 650px
+    
+    .card a
+        margin-left: 295px
+    
 
 
 @media only screen and (max-width: 905px) and (min-width: 689px)
     .home
         grid-template-columns: repeat(2, 2fr)
         grid-template-rows: repeat(2, 500px)
+
+        .img3
+            background-position: bottom
+        
     
     h1
         font-size: 30px
@@ -310,21 +351,19 @@ button
         color: white
         background-color: rgba(0, 0, 0, 0.774)
     
-    .img3
-        background-position: bottom
-    
     footer
         height: 100%
         width: 100%
-    
-    .contacto
-        content-visibility: hidden
-    
-    .navegacion
-        margin-left: 80px
-    
-    .redes_sociales
-        margin-right: 10px
+
+        .contacto
+            content-visibility: hidden
+        
+        .navegacion
+            margin-left: 80px
+        
+        .redes_sociales
+            margin-right: 10px
+        
     
 
 
@@ -335,10 +374,39 @@ button
     
 
 
+@media only screen and (max-width: 860px) and (min-width: 320px)
+    .vw_truck
+        background-position: center
+    
+
+
+@media only screen and (max-width: 800px)
+    iframe
+        width: 550px
+    
+
+
+@media only screen and (max-width: 780px)
+    
+
+
 @media only screen and (max-width: 730px)
     .clients
         grid-template-columns: repeat(1, 1fr)
         grid-template-rows: repeat(6, 450px)
+    
+
+
+@media only screen and (max-width: 720px)
+    section
+        grid-template-rows: repeat(4, 700px)
+        height: 2850px
+    
+    .card
+        width: 500px
+    
+    .card a
+        margin-left: 195px
     
 
 
@@ -359,13 +427,20 @@ button
     
 
 
+@media only screen and (max-width: 666px)
+    iframe
+        width: 450px
+    
+
+
 @media only screen and (max-width: 605px) and (min-width: 320px)
     .home
         grid-template-columns: repeat(1, 1fr)
         grid-template-rows: repeat(1, 200px)
-    
-    .img3
-        background-image: url(multimedia/obra.jpg)
+
+        .img3
+            background-image: url(multimedia/obra.jpg)
+        
     
 
 
@@ -381,6 +456,19 @@ button
     
 
 
+@media only screen and (max-width: 560px)
+    .mapa
+        content-visibility: hidden
+    
+    h6
+        content-visibility: hidden
+    
+    form
+        margin: 10px
+        margin-top: 50px
+    
+
+
 @media only screen and (max-width: 548px) and (min-width: 496px)
     .navegacion
         content-visibility: hidden
@@ -388,6 +476,26 @@ button
     .redes_sociales
         margin-top: 45px
         margin-right: 30px
+    
+
+
+@media only screen and (max-width: 520px)
+    section
+        grid-template-rows: repeat(4, 550px)
+        height: 2300px
+    
+    .card
+        width: 400px
+        height: 500px
+    
+    .card_title
+        font-size: 19px
+    
+    .card_desc
+        font-size: 18px
+    
+    .card a
+        margin-left: 150px
     
 
 
@@ -420,6 +528,25 @@ button
     
 
 
+@media only screen and (max-width: 426px)
+    section
+        grid-template-rows: repeat(4, 550px)
+        height: 2250px
+    
+    .card
+        width: 300px
+    
+    .card a
+        margin-left: 95px
+    
+
+
+@media only screen and (max-width: 409px)
+    .vw_truck
+        height: 750px
+    
+
+
 @media only screen and (max-width: 406px)
     .redes_sociales
         margin: 45px 130px 40px 5px
@@ -430,6 +557,12 @@ button
     .redes_sociales
         margin-right: 120px
         margin-top: 40px
+    
+
+
+@media only screen and (max-width: 388px)
+    .vw_truck
+        height: 800px
     
 
 
@@ -448,7 +581,49 @@ button
     
 
 
+@media only screen and (max-width: 371px)
+    .vw_truck
+        height: 850px
+        background-position: center
+    
+
+
 @media only screen and (max-width: 355px) and (min-width: 320px)
     .redes_sociales
         margin-left: 95px
+    
+
+
+@media only screen and (max-width: 340px)
+    section
+        grid-template-rows: repeat(4, 550px)
+    
+    .card
+        width: 250px
+    
+    .card a
+        margin-left: 70px
+    
+
+
+@media only screen and (max-width: 329px)
+    .vw_truck
+        height: 920px
+    
+
+
+@media only screen and (max-width: 321px)
+    .vw_truck
+        height: 940px
+    
+
+
+@media only screen and (max-width: 320px)
+    form
+        height: 400px
+        padding: 10px
+        padding-top: 30px
+    
+    .boton
+        margin-top: 50px
     
