--- a/style.scss
+++ b/style.scss
@@ -6,37 +6,25 @@
     box-sizing: border-box;
     text-decoration: none !important; 
 }
-.navbar{
-    height: 150px !important;
-    background-color: rgb(2, 57, 128) !important;
-}
-.img-navbar{
-    height: 160px;
-}
-.nav-link{
-    color: white !important;
-}
-.nav-link:hover{
-    color: black !important;
-}
-.nav_bar{
-    font-size: 30px;
-    margin: 30px;
-    color: white
-}
-.nav_bar:hover{
-    cursor: pointer;
-}
-nav a{
-    font-family: 'Heebo', sans-serif;
-    padding-right: 10px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    justify-content: space-between;
-    font-size: 18px;
-}
-nav a:hover{
-    color: rgb(0, 0, 0);
+header{
+
+    .navbar{
+        height: 150px !important;
+        font-size: 20px;
+        background-color: rgb(2, 57, 128) !important;
+
+        .img-navbar{
+            height: 160px;
+        }
+    }
+
+    .nav-link{
+        color: white !important;
+    }
+
+    .nav-link:hover{
+        color: black !important;
+    }
 }
 body{
     margin: 0;
@@ -67,38 +55,65 @@ h6{
 footer{
     width: 100%;
     height: 100%;
-}
-.container__footer{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: auto;
-    margin: auto;
-    height: 170px;
-    background-color: rgb(2, 57, 128);
-    color: rgb(255, 255, 255);
-    font-family: 'Heebo', sans-serif;
-}
-.logo1 img{
-    height: 160px;
-    margin-bottom: 10px;
+
+    .container__footer{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: auto;
+        margin: auto;
+        height: 170px;
+        background-color: rgb(2, 57, 128);
+        color: rgb(255, 255, 255);
+        font-family: 'Heebo', sans-serif;
+
+        .logo1 img{
+            height: 160px;
+            margin-bottom: 10px;
+        }
+    }
+
+    nav a{
+        font-family: 'Heebo', sans-serif;
+        padding-right: 10px;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+        justify-content: space-between;
+        font-size: 18px;
+    }
+
+    nav a:hover{
+        color: rgb(0, 0, 0);
+    }
 }
 footer i{
     font-size: 20px;
     margin-left: 33px;
+}
+
+.navegacion{
+    margin: 10px;
+}
+.contacto{
+    font-family: 'Heebo', sans-serif !important;
+    margin: 10px;
+}
+.redes_sociales{
+    margin: 10px;
 }
 .vw_truck{
     background-image: url(multimedia/planta4.png);
     background-size: cover;
     overflow: hidden;
     height: 700px;
-}
-.us{
-    background-color: rgba(0, 0, 0, 0.774);
-    color: white;
-    font-size: 25px;
-    margin: 20px 10px 10px 10px;
-    padding: 10px
+
+    .us{
+        background-color: rgba(0, 0, 0, 0.774);
+        color: white;
+        font-size: 25px;
+        margin: 20px 10px 10px 10px;
+        padding: 10px
+    }
 }
 section{
     display: flex;
@@ -158,52 +173,27 @@ section{
     height: 1000px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 1fr);
-}
-.foto{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    font-size: 20px;
-}
-.img1{
-    background-image: url(multimedia/planta.jpg);
-}
-.img2{
-    background-image: url(multimedia/descarga2.jpg);
-}
-.img3{
-    background-image: url(multimedia/movimiento\ de\ suelo.jpg);
-}
-.img4{
-    background-image: url(multimedia/planta4.png)
-}
-.servicios{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(2, 2fr);
-    grid-template-rows: repeat(2, 400px);
-    padding: 15px;
-    grid-gap: 115px;
-    margin-top: 30px;
-    margin-bottom: 130px;
-}
-.fot{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
-}
-.fot1{
-    background-image: url(multimedia/descarga6.jpg);
-}
-.fot2{
-    background-image: url(multimedia/camion\ 3.jpg);
-}
-.fot3{
-    background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
-}
-.fot4{
-    background-image: url(multimedia/laboratorio.jpg);
+
+    .foto{
+        border: 1px solid #000;
+        background-position: center;
+        background-size: cover;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .img1{
+        background-image: url(multimedia/planta.jpg);
+    }
+    .img2{
+        background-image: url(multimedia/descarga2.jpg);
+    }
+    .img3{
+        background-image: url(multimedia/movimiento\ de\ suelo.jpg);
+    }
+    .img4{
+        background-image: url(multimedia/planta4.png)
+    }
 }
 h3{
     color: white;
@@ -227,43 +217,47 @@ h2:hover{
     grid-template-rows: repeat(2, 300px);
     grid-gap: 15px;
     padding: 15px;
-}
-.item{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    transition: all 0.3s;
-}
-.item:hover{
-    transform: scale(1.02);
-}
-.item1{
-    background-image: url(multimedia/C1.png);
-}
-.item2{
-    background-image: url(multimedia/C2.png);
-}
-.item3{
-    background-image: url(multimedia/C3.png);
-}
-.item4{
-    background-image: url(multimedia/C4.png);
-}
-.item5{
-    background-image: url(multimedia/C5.png);
-}
-.item6{
-    background-image: url(multimedia/C6.png);
+
+    .item{
+        border: 1px solid #000;
+        background-position: center;
+        background-size: cover;
+        border-radius: 10px;
+        transition: all 0.3s;
+    }
+
+    .item:hover{
+        transform: scale(1.02);
+    }
+
+    .item1{
+        background-image: url(multimedia/C1.png);
+    }
+    .item2{
+        background-image: url(multimedia/C2.png);
+    }
+    .item3{
+        background-image: url(multimedia/C3.png);
+    }
+    .item4{
+        background-image: url(multimedia/C4.png);
+    }
+    .item5{
+        background-image: url(multimedia/C5.png);
+    }
+    .item6{
+        background-image: url(multimedia/C6.png);
+    }
 }
 form{
     margin: 50px;
     margin-top: 20px;
-    height: 185px;
-    width: 1260px;
-    border-style: solid;
-    text-align: center;
-    font-weight: 600 !important;
+    border: solid 2px black;
+    height: 340px;
+    width: auto;
+    text-align: left;
+    padding: 10px;
+    font-weight: 600;
 }
 .mapa{
     margin: 20px 20px 40px 20px;
@@ -271,23 +265,6 @@ form{
 }
 iframe{
     width: 1000px;
-}
-.navegacion{
-    margin: 10px;
-}
-.contacto{
-    font-family: 'Heebo', sans-serif !important;
-    margin: 10px;
-}
-.redes_sociales{
-    margin: 10px;
-}
-form{
-    border: solid 2px black;
-    height: 340px;
-    width: auto;
-    text-align: left;
-    padding: 10px;
 }
 .mb-3{
     font-size: 20px;
@@ -363,6 +340,10 @@ form{
     .home{
         grid-template-columns: repeat(2, 2fr);
         grid-template-rows: repeat(2, 500px);
+
+        .img3{
+            background-position: bottom;
+        }
     }
     h1{
         font-size: 30px;
@@ -371,21 +352,19 @@ form{
         color: white;
         background-color: rgba(0, 0, 0, 0.774);
     }
-    .img3{
-        background-position: bottom;
-    }
     footer{
         height: 100%;
         width: 100%;
-    }
-    .contacto{
-        content-visibility: hidden;
-    }
-    .navegacion{
-        margin-left: 80px;
-    }
-    .redes_sociales{
-        margin-right: 10px;
+
+        .contacto{
+            content-visibility: hidden;
+        }
+        .navegacion{
+            margin-left: 80px;
+        }
+        .redes_sociales{
+            margin-right: 10px;
+        }
     }
 }
 
@@ -459,9 +438,10 @@ form{
     .home{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 200px);
-    }
-    .img3{
-        background-image: url(multimedia/obra.jpg);
+
+        .img3{
+            background-image: url(multimedia/obra.jpg);
+        }
     }
 }
 
