--- a/scss/style.css
+++ b/scss/style.css
@@ -41,10 +41,35 @@ body h6 {
   margin-top: 5px;
   color: black;
 }
+body h3 {
+  color: white;
+  text-align: center;
+  font-size: larger;
+  font-weight: 650;
+}
+body h2 {
+  margin: 20px 10px 10px 10px;
+  color: black;
+  text-align: center;
+}
+body h2:hover {
+  color: rgb(2, 57, 128);
+}
 
 footer {
   width: 100%;
   height: 100%;
+}
+footer nav a {
+  font-family: "Heebo", sans-serif;
+  padding-right: 10px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  justify-content: space-between;
+  font-size: 18px;
+}
+footer nav a:hover {
+  color: rgb(0, 0, 0);
 }
 footer .container__footer {
   display: flex;
@@ -68,22 +93,6 @@ footer .container__footer h5 {
   font-size: 18px !important;
   margin-top: 12px;
 }
-footer nav a {
-  font-family: "Heebo", sans-serif;
-  padding-right: 10px;
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  justify-content: space-between;
-  font-size: 18px;
-}
-footer nav a:hover {
-  color: rgb(0, 0, 0);
-}
-
-footer i {
-  font-size: 20px;
-  margin-left: 33px;
-}
 
 .navegacion {
   margin: 10px;
@@ -98,8 +107,13 @@ footer i {
   margin: 10px;
 }
 
+footer i {
+  font-size: 20px;
+  margin-left: 33px;
+}
+
 .vw_truck {
-  background-image: url(multimedia/planta4.png);
+  background-image: url(../multimedia/planta4.png);
   background-size: cover;
   overflow: hidden;
   height: 700px;
@@ -136,19 +150,19 @@ section {
 }
 
 .card_img1 {
-  background-image: url(multimedia/descarga6.jpg);
+  background-image: url(../multimedia/descarga6.jpg);
 }
 
 .card_img2 {
-  background-image: url(multimedia/camion4.jpg);
+  background-image: url(../multimedia/camion4.jpg);
 }
 
 .card_img3 {
-  background-image: url(multimedia/laboratorio.jpg);
+  background-image: url(../multimedia/laboratorio.jpg);
 }
 
 .card_img4 {
-  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
+  background-image: url(../multimedia/movimiento\ de\ suelo\ 2.jpg);
 }
 
 .card_title {
@@ -189,33 +203,16 @@ section {
   font-size: 20px;
 }
 .home .img1 {
-  background-image: url(multimedia/planta.jpg);
+  background-image: url(../multimedia/planta.jpg);
 }
 .home .img2 {
-  background-image: url(multimedia/descarga2.jpg);
+  background-image: url(../multimedia/descarga2.jpg);
 }
 .home .img3 {
-  background-image: url(multimedia/movimiento\ de\ suelo.jpg);
+  background-image: url(../multimedia/movimiento\ de\ suelo.jpg);
 }
 .home .img4 {
-  background-image: url(multimedia/planta4.png);
-}
-
-h3 {
-  color: white;
-  text-align: center;
-  font-size: larger;
-  font-weight: 650;
-}
-
-h2 {
-  margin: 20px 10px 10px 10px;
-  color: black;
-  text-align: center;
-}
-
-h2:hover {
-  color: rgb(2, 57, 128);
+  background-image: url(../multimedia/planta4.png);
 }
 
 .clients {
@@ -238,22 +235,22 @@ h2:hover {
   transform: scale(1.02);
 }
 .clients .item1 {
-  background-image: url(multimedia/C1.png);
+  background-image: url(../multimedia/C1.png);
 }
 .clients .item2 {
-  background-image: url(multimedia/C2.png);
+  background-image: url(../multimedia/C2.png);
 }
 .clients .item3 {
-  background-image: url(multimedia/C3.png);
+  background-image: url(../multimedia/C3.png);
 }
 .clients .item4 {
-  background-image: url(multimedia/C4.png);
+  background-image: url(../multimedia/C4.png);
 }
 .clients .item5 {
-  background-image: url(multimedia/C5.png);
+  background-image: url(../multimedia/C5.png);
 }
 .clients .item6 {
-  background-image: url(multimedia/C6.png);
+  background-image: url(../multimedia/C6.png);
 }
 
 form {
@@ -299,7 +296,7 @@ iframe {
     height: 800px;
   }
   .card_img1 {
-    background-image: url(multimedia/descarga8.jpg);
+    background-image: url(../multimedia/descarga8.jpg);
   }
   .card a {
     margin-left: 500px;
@@ -347,15 +344,15 @@ iframe {
     grid-template-columns: repeat(2, 2fr);
     grid-template-rows: repeat(2, 500px);
   }
-  .home .img3 {
-    background-position: bottom;
-  }
-  h1 {
+  .home h1 {
     font-size: 30px;
   }
-  h2 {
+  .home h2 {
     color: white;
     background-color: rgba(0, 0, 0, 0.774);
+  }
+  .home .img3 {
+    background-position: bottom;
   }
   footer {
     height: 100%;
@@ -406,17 +403,17 @@ iframe {
   }
 }
 @media only screen and (max-width: 688px) {
-  .home {
-    grid-template-columns: repeat(2, 2fr);
-    grid-template-rows: repeat(2, 500px);
-  }
   .contacto {
     content-visibility: hidden;
   }
   .navegacion {
     margin-left: 80px;
   }
-  h2 {
+  .home {
+    grid-template-columns: repeat(2, 2fr);
+    grid-template-rows: repeat(2, 500px);
+  }
+  .home h2 {
     background-color: rgba(0, 0, 0, 0.774);
     color: white;
   }
@@ -432,7 +429,7 @@ iframe {
     grid-template-rows: repeat(1, 200px);
   }
   .home .img3 {
-    background-image: url(multimedia/obra.jpg);
+    background-image: url(../multimedia/obra.jpg);
   }
 }
 @media only screen and (max-width: 575px) and (min-width: 320px) {
