--- a/scss/style.sass
+++ b/scss/style.sass
@@ -1,49 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap')
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap")
 /* font-family: 'Heebo', sans-serif */
 *
     margin: 0
     padding: 0
     box-sizing: border-box
-    text-decoration: none !important 
+    text-decoration: none !important
 
-header
+header .navbar 
+    height: 150px !important
+    font-size: 20px
+    background-color: rgb(2, 57, 128) !important
 
-    .navbar
-        height: 150px !important
-        background-color: rgb(2, 57, 128) !important
+header .navbar .img-navbar 
+    height: 160px
 
-        .img-navbar
-            height: 160px
-        
-    
+header .navbar .nav-link 
+    color: white !important
 
-    .nav-link
-        color: white !important
-    
-
-    .nav-link:hover
-        color: black !important
-    
+header .navbar .nav-link:hover 
+    color: black !important
 
 body
     margin: 0
     background-color: rgb(141, 141, 141)
-    font-family: 'Heebo', sans-serif
+    font-family: "Heebo", sans-serif
 
-h1
+body h1 
     text-align: center
     margin-top: 20px
     color: white
     font-size: 30px !important
 
-h4
-    font-size: 23px !important
-
-h5
-    font-size: 18px !important
-    margin-top: 12px
-
-h6
+body h6 
     font-size: 20px !important
     font-weight: 700
     text-align: center
@@ -51,68 +39,83 @@ h6
     margin-top: 5px
     color: black
 
+body h3 
+    color: white
+    text-align: center
+    font-size: larger
+    font-weight: 650
+
+body h2 
+    margin: 20px 10px 10px 10px
+    color: black
+    text-align: center
+
+body h2:hover 
+    color: rgb(2, 57, 128)
+
 footer
     width: 100%
     height: 100%
 
-    .container__footer
-        display: flex
-        justify-content: space-between
-        flex-wrap: wrap
-        width: auto
-        margin: auto
-        height: 170px
-        background-color: rgb(2, 57, 128)
-        color: rgb(255, 255, 255)
-        font-family: 'Heebo', sans-serif
+footer nav a 
+    font-family: "Heebo", sans-serif
+    padding-right: 10px
+    color: rgb(255, 255, 255)
+    text-decoration: none
+    justify-content: space-between
+    font-size: 18px
 
-        .logo1 img
-            height: 160px
-            margin-bottom: 10px
-        
-    
+footer nav a:hover 
+    color: rgb(0, 0, 0)
 
-    nav a
-        font-family: 'Heebo', sans-serif
-        padding-right: 10px
-        color: rgb(255, 255, 255)
-        text-decoration: none
-        justify-content: space-between
-        font-size: 18px
-    
+footer .container__footer 
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    width: auto
+    margin: auto
+    height: 170px
+    background-color: rgb(2, 57, 128)
+    color: rgb(255, 255, 255)
+    font-family: "Heebo", sans-serif
 
-    nav a:hover
-        color: rgb(0, 0, 0)
-    
+footer .container__footer .logo1 img 
+    height: 160px
+    margin-bottom: 10px
 
-footer i
-    font-size: 20px
-    margin-left: 33px
+footer .container__footer h4 
+    font-size: 23px !important
 
+footer .container__footer h5 
+    font-size: 18px !important
+    margin-top: 12px
 
 .navegacion
     margin: 10px
 
 .contacto
-    font-family: 'Heebo', sans-serif !important
+    font-family: "Heebo", sans-serif !important
     margin: 10px
 
 .redes_sociales
     margin: 10px
 
+footer i 
+    font-size: 20px
+    margin-left: 33px
+
 .vw_truck
-    background-image: url(multimedia/planta4.png)
+    background-image: url(../multimedia/planta4.png)
     background-size: cover
     overflow: hidden
     height: 700px
 
-    .us
-        background-color: rgba(0, 0, 0, 0.774)
-        color: white
-        font-size: 25px
-        margin: 20px 10px 10px 10px
-        padding: 10px
-    
+.vw_truck .us
+    background-color: rgba(0, 0, 0, 0.774)
+    color: white
+    font-size: 25px
+    margin: 20px 10px 10px 10px
+    padding: 10px
 
 section
     display: flex
@@ -135,16 +138,16 @@ section
     background-position: center
 
 .card_img1
-    background-image: url(multimedia/descarga6.jpg)
+    background-image: url(../multimedia/descarga6.jpg)
 
 .card_img2
-    background-image: url(multimedia/camion4.jpg)
+    background-image: url(../multimedia/camion4.jpg)
 
 .card_img3
-    background-image: url(multimedia/laboratorio.jpg)
+    background-image: url(../multimedia/laboratorio.jpg)
 
 .card_img4
-    background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg)
+    background-image: url(../multimedia/movimiento\ de\ suelo\ 2.jpg)
 
 .card_title
     font-size: 19px
@@ -166,50 +169,34 @@ section
     border-radius: 10px
 
 .home
-    font-family: 'Heebo', sans-serif
+    font-family: "Heebo", sans-serif
     display: grid
     width: 100%
     height: 1000px
     grid-template-columns: repeat(4, 1fr)
     grid-template-rows: repeat(1, 1fr)
 
-    .foto
-        border: 1px solid #000
-        background-position: center
-        background-size: cover
-        text-align: center
-        font-size: 20px
-    
-
-    .img1
-        background-image: url(multimedia/planta.jpg)
-    
-    .img2
-        background-image: url(multimedia/descarga2.jpg)
-    
-    .img3
-        background-image: url(multimedia/movimiento\ de\ suelo.jpg)
-    
-    .img4
-        background-image: url(multimedia/planta4.png)
-    
-
-h3
-    color: white
+.home .foto
+    border: 1px solid #000
+    background-position: center
+    background-size: cover
     text-align: center
-    font-size: larger
-    font-weight: 650
+    font-size: 20px
 
-h2
-    margin: 20px 10px 10px 10px
-    color: black
-    text-align: center
+.home .img1
+    background-image: url(../multimedia/planta.jpg)
 
-h2:hover
-    color: rgb(2, 57, 128)
+.home .img2
+    background-image: url(../multimedia/descarga2.jpg)
+
+.home .img3
+    background-image: url(../multimedia/movimiento\ de\ suelo.jpg)
+
+.home .img4
+    background-image: url(../multimedia/planta4.png)
 
 .clients
-    font-family: 'Heebo', sans-serif
+    font-family: "Heebo", sans-serif
     display: grid
     width: 100%
     grid-template-columns: repeat(3, 3fr)
@@ -217,36 +204,33 @@ h2:hover
     grid-gap: 15px
     padding: 15px
 
-    .item
-        border: 1px solid #000
-        background-position: center
-        background-size: cover
-        border-radius: 10px
-        transition: all 0.3s
-    
+.clients .item
+    border: 1px solid #000
+    background-position: center
+    background-size: cover
+    border-radius: 10px
+    transition: all 0.3s
 
-    .item:hover
-        transform: scale(1.02)
-    
+.clients .item:hover
+    transform: scale(1.02)
 
-    .item1
-        background-image: url(multimedia/C1.png)
-    
-    .item2
-        background-image: url(multimedia/C2.png)
-    
-    .item3
-        background-image: url(multimedia/C3.png)
-    
-    .item4
-        background-image: url(multimedia/C4.png)
-    
-    .item5
-        background-image: url(multimedia/C5.png)
-    
-    .item6
-        background-image: url(multimedia/C6.png)
-    
+.clients .item1
+    background-image: url(../multimedia/C1.png)
+
+.clients .item2
+    background-image: url(../multimedia/C2.png)
+
+.clients .item3
+    background-image: url(../multimedia/C3.png)
+
+.clients .item4
+    background-image: url(../multimedia/C4.png)
+
+.clients .item5
+    background-image: url(../multimedia/C5.png)
+
+.clients .item6
+    background-image: url(../multimedia/C6.png)
 
 form
     margin: 50px
@@ -271,359 +255,283 @@ iframe
 .boton
     text-align: center
 
-
 /*comienzan las media quare*/
-
 @media only screen and (max-width: 1215px)
-    section
-        display: grid
-        grid-template-rows: repeat(4, 850px)
-        height: 3450px
-    
-    .card
-        width: 1100px
-        height: 800px
-    
-    .card_img
-        height: 800px
-    
-    .card_img1
-        background-image: url(multimedia/descarga8.jpg)
-    
-    .card a
-        margin-left: 500px
-        margin-bottom: 20px
-    
-    .card_title
-        font-size: 30px
-    
-    .card_desc
-        font-size: 20px
-    
+section
+    display: grid
+    grid-template-rows: repeat(4, 850px)
+    height: 3450px
 
+.card
+    width: 1100px
+    height: 800px
+
+.card_img
+    height: 800px
+
+.card_img1
+    background-image: url(../multimedia/descarga8.jpg)
+
+.card a
+    margin-left: 500px
+    margin-bottom: 20px
+
+.card_title
+    font-size: 30px
+
+.card_desc
+    font-size: 20px
 
 @media only screen and (max-width: 1120px)
-    section
-        grid-template-rows: repeat(4, 750px)
-        height: 3050px
-    
-    .card
-        width: 900px
-        height: 700px
-    
-    .card a
-        margin-left: 400px
-    
+section
+    grid-template-rows: repeat(4, 750px)
+    height: 3050px
 
+.card
+    width: 900px
+    height: 700px
+
+.card a
+    margin-left: 400px
 
 @media only screen and (max-width: 1080px)
-    iframe
-        width: 700px
-    
-
+iframe
+    width: 700px
 
 @media only screen and (max-width: 920px)
-    section
-        grid-template-rows: repeat(4, 750px)
-    
-    .card
-        width: 700px
-        height: 650px
-    
-    .card a
-        margin-left: 295px
-    
+section
+    grid-template-rows: repeat(4, 750px)
 
+.card
+    width: 700px
+    height: 650px
+
+.card a
+    margin-left: 295px
 
 @media only screen and (max-width: 905px) and (min-width: 689px)
-    .home
-        grid-template-columns: repeat(2, 2fr)
-        grid-template-rows: repeat(2, 500px)
+.home
+    grid-template-columns: repeat(2, 2fr)
+    grid-template-rows: repeat(2, 500px)
 
-        .img3
-            background-position: bottom
-        
-    
-    h1
-        font-size: 30px
-    
-    h2
-        color: white
-        background-color: rgba(0, 0, 0, 0.774)
-    
-    footer
-        height: 100%
-        width: 100%
+.home h1
+    font-size: 30px
 
-        .contacto
-            content-visibility: hidden
-        
-        .navegacion
-            margin-left: 80px
-        
-        .redes_sociales
-            margin-right: 10px
-        
-    
+.home h2
+    color: white
+    background-color: rgba(0, 0, 0, 0.774)
 
+.home .img3
+    background-position: bottom
+
+footer
+    height: 100%
+    width: 100%
+
+  footer .contacto 
+    content-visibility: hidden
+
+  footer .navegacion 
+    margin-left: 80px
+
+  footer .redes_sociales 
+    margin-right: 10px
 
 @media only screen and (max-width: 900px)
-    .clients
-        grid-template-columns: repeat(2, 2fr)
-        grid-template-rows: repeat(3, 400px)
-    
-
+.clients
+    grid-template-columns: repeat(2, 2fr)
+    grid-template-rows: repeat(3, 400px)
 
 @media only screen and (max-width: 860px) and (min-width: 320px)
-    .vw_truck
-        background-position: center
-    
-
+.vw_truck
+    background-position: center
 
 @media only screen and (max-width: 800px)
-    iframe
-        width: 550px
-    
-
-
-@media only screen and (max-width: 780px)
-    
-
+iframe
+    width: 550px
 
 @media only screen and (max-width: 730px)
-    .clients
-        grid-template-columns: repeat(1, 1fr)
-        grid-template-rows: repeat(6, 450px)
-    
-
+.clients
+    grid-template-columns: repeat(1, 1fr)
+    grid-template-rows: repeat(6, 450px)
 
 @media only screen and (max-width: 720px)
-    section
-        grid-template-rows: repeat(4, 700px)
-        height: 2850px
-    
-    .card
-        width: 500px
-    
-    .card a
-        margin-left: 195px
-    
+section
+    grid-template-rows: repeat(4, 700px)
+    height: 2850px
 
+.card
+    width: 500px
+
+.card a
+    margin-left: 195px
 
 @media only screen and (max-width: 688px)
-    .home
-        grid-template-columns: repeat(2, 2fr)
-        grid-template-rows: repeat(2, 500px)
-    
-    .contacto
-        content-visibility: hidden
-    
-    .navegacion
-        margin-left: 80px
-    
-    h2
-        background-color: rgba(0, 0, 0, 0.774)
-        color: white
-    
+.contacto
+    content-visibility: hidden
 
+.navegacion
+    margin-left: 80px
+
+.home
+    grid-template-columns: repeat(2, 2fr)
+    grid-template-rows: repeat(2, 500px)
+
+.home h2
+    background-color: rgba(0, 0, 0, 0.774)
+    color: white
 
 @media only screen and (max-width: 666px)
-    iframe
-        width: 450px
-    
-
+iframe
+    width: 450px
 
 @media only screen and (max-width: 605px) and (min-width: 320px)
-    .home
-        grid-template-columns: repeat(1, 1fr)
-        grid-template-rows: repeat(1, 200px)
+.home
+    grid-template-columns: repeat(1, 1fr)
+    grid-template-rows: repeat(1, 200px)
 
-        .img3
-            background-image: url(multimedia/obra.jpg)
-        
-    
-
+.home .img3
+    background-image: url(../multimedia/obra.jpg)
 
 @media only screen and (max-width: 575px) and (min-width: 320px)
-    .navbar-collapse
-        background-color: rgb(2, 57, 128)
-    
-
+.navbar-collapse
+    background-color: rgb(2, 57, 128)
 
 @media only screen and (max-width: 566px)
-    h4
-        font-size: 21px !important
-    
-
+h4
+    font-size: 21px !important
 
 @media only screen and (max-width: 560px)
-    .mapa
-        content-visibility: hidden
-    
-    h6
-        content-visibility: hidden
-    
-    form
-        margin: 10px
-        margin-top: 50px
-    
+.mapa
+    content-visibility: hidden
 
+h6
+    content-visibility: hidden
+
+form
+    margin: 10px
+    margin-top: 50px
 
 @media only screen and (max-width: 548px) and (min-width: 496px)
-    .navegacion
-        content-visibility: hidden
-    
-    .redes_sociales
-        margin-top: 45px
-        margin-right: 30px
-    
+.navegacion
+    content-visibility: hidden
 
+.redes_sociales
+    margin-top: 45px
+    margin-right: 30px
 
 @media only screen and (max-width: 520px)
-    section
-        grid-template-rows: repeat(4, 550px)
-        height: 2300px
-    
-    .card
-        width: 400px
-        height: 500px
-    
-    .card_title
-        font-size: 19px
-    
-    .card_desc
-        font-size: 18px
-    
-    .card a
-        margin-left: 150px
-    
+section
+    grid-template-rows: repeat(4, 550px)
+    height: 2300px
 
+.card
+    width: 400px
+    height: 500px
+
+.card_title
+    font-size: 19px
+
+.card_desc
+    font-size: 18px
+
+.card a
+    margin-left: 150px
 
 @media only screen and (max-width: 496px)
-    .navegacion
-        content-visibility: hidden
-    
-    .redes_sociales
-        margin-top: 45px
-        margin-right: 20px
-    
-    h2
-        font-size: 20px
-        background-color: rgba(0, 0, 0, 0.774)
-    
+.navegacion
+    content-visibility: hidden
 
+.redes_sociales
+    margin-top: 45px
+    margin-right: 20px
+
+h2
+    font-size: 20px
+    background-color: rgba(0, 0, 0, 0.774)
 
 @media only screen and (max-width: 460px)
-    .clients
-        grid-template-rows: repeat(6, 300px)
-    
-
+.clients
+    grid-template-rows: repeat(6, 300px)
 
 @media only screen and (max-width: 451px)
-    .logo1
-        content-visibility: hidden
-    
-    .redes_sociales
-        margin: 45px 130px 40px 5px
-    
+.logo1
+    content-visibility: hidden
 
+.redes_sociales
+    margin: 45px 130px 40px 5px
 
 @media only screen and (max-width: 426px)
-    section
-        grid-template-rows: repeat(4, 550px)
-        height: 2250px
-    
-    .card
-        width: 300px
-    
-    .card a
-        margin-left: 95px
-    
+section
+    grid-template-rows: repeat(4, 550px)
+    height: 2250px
 
+.card
+    width: 300px
+
+.card a
+    margin-left: 95px
 
 @media only screen and (max-width: 409px)
-    .vw_truck
-        height: 750px
-    
-
+.vw_truck
+    height: 750px
 
 @media only screen and (max-width: 406px)
-    .redes_sociales
-        margin: 45px 130px 40px 5px
-    
-
+.redes_sociales
+    margin: 45px 130px 40px 5px
 
 @media only screen and (max-width: 396px)
-    .redes_sociales
-        margin-right: 120px
-        margin-top: 40px
-    
-
+.redes_sociales
+    margin-right: 120px
+    margin-top: 40px
 
 @media only screen and (max-width: 388px)
-    .vw_truck
-        height: 800px
-    
-
+.vw_truck
+    height: 800px
 
 @media only screen and (max-width: 386px)
-    .redes_sociales
-        margin-right: 110px
-        margin-top: 40px
-    
-
+.redes_sociales
+    margin-right: 110px
+    margin-top: 40px
 
 @media only screen and (max-width: 376px)
-    .redes_sociales
-        margin-left: 120px
-        margin-right: 50px
-        margin-top: 10px
-    
-
+.redes_sociales
+    margin-left: 120px
+    margin-right: 50px
+    margin-top: 10px
 
 @media only screen and (max-width: 371px)
-    .vw_truck
-        height: 850px
-        background-position: center
-    
-
+.vw_truck
+    height: 850px
+    background-position: center
 
 @media only screen and (max-width: 355px) and (min-width: 320px)
-    .redes_sociales
-        margin-left: 95px
-    
-
+.redes_sociales
+    margin-left: 95px
 
 @media only screen and (max-width: 340px)
-    section
-        grid-template-rows: repeat(4, 550px)
-    
-    .card
-        width: 250px
-    
-    .card a
-        margin-left: 70px
-    
+section
+    grid-template-rows: repeat(4, 550px)
 
+.card
+    width: 250px
+
+.card a
+    margin-left: 70px
 
 @media only screen and (max-width: 329px)
-    .vw_truck
-        height: 920px
-    
-
+.vw_truck
+    height: 920px
 
 @media only screen and (max-width: 321px)
-    .vw_truck
-        height: 940px
-    
-
+.vw_truck
+    height: 940px
 
 @media only screen and (max-width: 320px)
-    form
-        height: 400px
-        padding: 10px
-        padding-top: 30px
-    
-    .boton
-        margin-top: 50px
-    
+form
+    height: 400px
+    padding: 10px
+    padding-top: 30px
+
+.boton
+    margin-top: 50px
