--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
 }
 
 header .navbar {
-  height: 150px !important;
   font-size: 20px;
   background-color: rgb(2, 57, 128) !important;
+  z-index: 2;
 }
 header .navbar .img-navbar {
   height: 160px;
