--- a/css/style.scss
+++ b/css/style.scss
@@ -9,9 +9,9 @@
 header{
 
     .navbar{
-        height: 150px !important;
         font-size: 20px;
         background-color: rgb(2, 57, 128) !important;
+        z-index: 2;
 
         .img-navbar{
             height: 160px;
