--- a/css/style.scss
+++ b/css/style.scss
@@ -394,10 +394,6 @@ iframe{
     }
 }
 
-@media only screen and (max-width: 780px){
-    
-}
-
 @media only screen and (max-width: 730px){
     .clients{
         grid-template-columns: repeat(1, 1fr);
@@ -457,6 +453,7 @@ iframe{
 @media only screen and (max-width: 575px) and (min-width: 320px){
     .navbar-collapse{
         background-color: rgb(2, 57, 128);
+        z-index: 2;
     }
 }
 
