--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,14 +1,16 @@
-.vw_truck{
-    background-image: url(../multimedia/planta4.png);
-    background-size: cover;
-    overflow: hidden;
-    height: 700px;
-
-    .us{
-        background-color: rgba(0, 0, 0, 0.774);
-        color: white;
-        font-size: 25px;
-        margin: 20px 10px 10px 10px;
-        padding: 10px
-    }
+.carousel-caption{
+    background-color: rgba(0, 0, 0, 0.829);
+    font-size: 25px;
+}
+.about{
+    border: 2px solid black;
+    background-image: url(/multimedia/planta5.jpg);
+    background-repeat: no-repeat;
+    height: 500px;
+}
+.us{
+    font-size: 20px;
+    padding: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.829)
 }
