--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap");
 /* font-family: 'Heebo', sans-serif; */
+.navegacion {
+  margin: 10px;
+}
+
+.contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
+}
+
+.redes_sociales {
+  margin: 10px;
+}
+
+footer i {
+  font-size: 20px;
+  margin-left: 33px;
+}
+
 /*pages inicio*/
 .home {
   font-family: "Heebo", sans-serif;
@@ -29,18 +47,23 @@
   background-image: url(../multimedia/planta4.png);
 }
 
-.vw_truck {
-  background-image: url(../multimedia/planta4.png);
-  background-size: cover;
-  overflow: hidden;
-  height: 700px;
-}
-.vw_truck .us {
-  background-color: rgba(0, 0, 0, 0.774);
-  color: white;
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.829);
   font-size: 25px;
-  margin: 20px 10px 10px 10px;
+}
+
+.about {
+  border: 2px solid black;
+  background-image: url(/multimedia/planta5.jpg);
+  background-repeat: no-repeat;
+  height: 500px;
+}
+
+.us {
+  font-size: 20px;
   padding: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.829);
 }
 
 section {
@@ -225,24 +248,6 @@ footer .container__footer h5 {
   margin-top: 12px;
 }
 
-.navegacion {
-  margin: 10px;
-}
-
-.contacto {
-  font-family: "Heebo", sans-serif !important;
-  margin: 10px;
-}
-
-.redes_sociales {
-  margin: 10px;
-}
-
-footer i {
-  font-size: 20px;
-  margin-left: 33px;
-}
-
 body {
   margin: 0;
   background-color: rgb(141, 141, 141);
@@ -288,6 +293,17 @@ body h2:hover {
 
 /*base fin*/
 /*comienzan las media quaries*/
+@media only screen and (max-width: 1440px) and (min-width: 768px) {
+  .about {
+    content-visibility: hidden;
+    background-image: none;
+    border: none;
+    height: 0px;
+  }
+  .us {
+    content-visibility: hidden;
+  }
+}
 @media only screen and (max-width: 1215px) {
   section {
     display: grid;
@@ -502,6 +518,12 @@ body h2:hover {
     background-color: rgba(0, 0, 0, 0.774);
   }
 }
+@media only screen and (max-width: 480px) {
+  .about {
+    background-position: left;
+    height: 570px;
+  }
+}
 @media only screen and (max-width: 460px) {
   .clients {
     grid-template-rows: repeat(6, 300px);
@@ -525,6 +547,9 @@ body h2:hover {
   }
   .card a {
     margin-left: 95px;
+  }
+  .about {
+    background-position: center;
   }
 }
 @media only screen and (max-width: 409px) {
@@ -603,5 +628,4 @@ body h2:hover {
     margin-top: 50px;
   }
 }
-/*terminan las media quaries*/
-/*# sourceMappingURL=style.css.map */
+/*terminan las media quaries*//*# sourceMappingURL=style.css.map */
